Improve OS support (#61)